--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p class="copy">Nos encargamos hacer tu vida más divertida<span class="copy_active"></span></p>
             <a href="#" class="cta">Registrear</a>
         </div>
-        <img src="img/5dc68b4411520e574ee13a9f_001.jpg" class="mockup">
+        <img src="img/Captura de pantalla 2021-11-15 123316.jpg" class="mockup">
 
     </section>
 
