--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Trenor</title>
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="img/Captura de pantalla 2021-11-15 123343.jpg" type="image/x-icon">
+
 </head>
 <body>
 <header class="hero">
