--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p class="copy">Nos encargamos hacer tu vida más divertida<span class="copy_active"></span></p>
             <a href="#" class="cta">Registrear</a>
         </div>
-        <img src="img/Captura de pantalla 2021-11-15 123316.jpg" class="mockup">
+        <img src="img/logo.png" class="mockup">
 
     </section>
 
