--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     Deportes
                     </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Futbol</a>
-                    <a class="dropdown-item" href="#">Padel</a>
+                    <a class="dropdown-item" href="futbol.html">Futbol</a>
+                    <a class="dropdown-item" href="padel.html">Padel</a>
                     <a class="dropdown-item" href="productos.html ">Productos</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Musculacion</a>
+                    <a class="dropdown-item" href="musculacion.html">Musculacion</a>
                   </div>
                 </li>
                
