--- a/musculacion.html
+++ b/musculacion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Que somos?</title>
+    <title>Musculacion</title>
     <link rel="stylesheet" href="css/somos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 </head>
-<body>
+<body class="musculacion">
     
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -29,11 +29,11 @@
                         Deportes
                         </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Futbol</a>
-                        <a class="dropdown-item" href="#">Padel</a>
+                        <a class="dropdown-item" href="futbol.html">Futbol</a>
+                        <a class="dropdown-item" href="padel.html">Padel</a>
                         <a class="dropdown-item" href="productos.html ">Productos</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Musculacion</a>
+                        <a class="dropdown-item" href="musculacion.html">Musculacion</a>
                       </div>
                     </li>
                    
@@ -46,19 +46,17 @@
               </nav>
         </header>
 
-    <div class="texto">
-        <h1>Trenor</h1>
-        <p>Trenor es una empresa que busca lo mejor para nuestra salud deportiva i mental,
-            en nuestra tienda podras encontrar desde productos de musculacion hasta las prendas 
-            de mas alta calidad para entrenar y jugar.</p>
-        <p>En nuestra pagina web podras encontrar descuentos increibles y siendo cliente podras 
-            recibir las mejores ofertas y estar atento a todos los lanzamientos con antelación.</p>
-        <p>Nuestras instalaciones ubicadas en Mallorca podras encontrar las mejores condiciones para 
-            poder profesionalizarte en el deporte i porque no empezar a aprender.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ea saepe culpa vitae 
-            esse iure voluptatem aliquam, nihil ipsum veritatis fugiat deleniti impedit rerum aliquid
-             mollitia hic vero vel facilis?</p>
-    </div>
+        <div class="texto">
+            <h1>Musculacio</h1>
+            <p>Aquest es el apartat de Musculacio, aqui podras trobar totes les novetats i informacio sobre com progresar.</p>
+            <p>Tambe podreu coneixer des de més aprop als culturistes.</p>
+            <p>Les nostres instalacions ubicades a Mallorca , podras trobar
+                les millors condicions per poder profesionalitzarte en el mon de la musculacio.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ea saepe culpa vitae 
+                esse iure voluptatem aliquam, nihil ipsum veritatis fugiat deleniti impedit rerum aliquid
+                 mollitia hic vero vel facilis?</p>
+        </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
