--- a/padel.html
+++ b/padel.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Que somos?</title>
+    <title>Padel</title>
     <link rel="stylesheet" href="css/somos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 </head>
-<body>
+<body class="padel">
     
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -29,11 +29,11 @@
                         Deportes
                         </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Futbol</a>
-                        <a class="dropdown-item" href="#">Padel</a>
+                        <a class="dropdown-item" href="futbol.html">Futbol</a>
+                        <a class="dropdown-item" href="padel.html">Padel</a>
                         <a class="dropdown-item" href="productos.html ">Productos</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Musculacion</a>
+                        <a class="dropdown-item" href="musculacion.html">Musculacion</a>
                       </div>
                     </li>
                    
@@ -47,14 +47,12 @@
         </header>
 
     <div class="texto">
-        <h1>Trenor</h1>
-        <p>Trenor es una empresa que busca lo mejor para nuestra salud deportiva i mental,
-            en nuestra tienda podras encontrar desde productos de musculacion hasta las prendas 
-            de mas alta calidad para entrenar y jugar.</p>
-        <p>En nuestra pagina web podras encontrar descuentos increibles y siendo cliente podras 
-            recibir las mejores ofertas y estar atento a todos los lanzamientos con antelación.</p>
-        <p>Nuestras instalaciones ubicadas en Mallorca podras encontrar las mejores condiciones para 
-            poder profesionalizarte en el deporte i porque no empezar a aprender.</p>
+        <h1>Padel</h1>
+        <p>Aquest es el apartat de Padel, aqui podras trobar totes les novetats i informacio sobre el mon del Padel.</p>
+        <p>Tambe podreu coneixer des de més aprop als profesionals del Padel.</p>
+        <p>Les nostres instalacions ubicades a Mallorca , podras trobar
+            les millors condicions per poder profesionalitzarte en el mon del padel.
+        </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ea saepe culpa vitae 
             esse iure voluptatem aliquam, nihil ipsum veritatis fugiat deleniti impedit rerum aliquid
              mollitia hic vero vel facilis?</p>
