--- a/somos.html
+++ b/somos.html
@@ -36,6 +36,9 @@
                         <a class="dropdown-item" href="#">Musculacion</a>
                       </div>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="registro.html">Cliente <span class="sr-only">(current)</span></a>
+                      </li>
                    
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
