--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
           <img src="img/botas de fúbtol-1.jpg" alt="">
           <h2>Futbol</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, mollitia!</p>
-          <a href="#">Futbol</a>
+          <a href="futbol.html">Futbol</a>
 
         </section>
         <section class="sector">
           <img src="img/palas.jpg" alt="">
           <h2>Padel</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, mollitia!</p>
-          <a href="#">Padel</a>
+          <a href="padel.html">Padel</a>
 
         </section>
         <section class="sector">
           <img src="img/mancuernas1.jpg" alt="">
           <h2>Musculación</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, mollitia!</p>
-          <a href="#">Musculacion</a>
+          <a href="musculacion.html">Musculacion</a>
         </section>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#273036" fill-opacity="1" d="M0,128L34.3,144C68.6,160,137,192,206,176C274.3,160,343,96,411,85.3C480,75,549,117,617,138.7C685.7,160,754,160,823,149.3C891.4,139,960,117,1029,133.3C1097.1,149,1166,203,1234,208C1302.9,213,1371,171,1406,149.3L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
 </body>
