--- a/registro.html
+++ b/registro.html
@@ -7,6 +7,7 @@
     <title>Clients</title>
     <link rel="stylesheet" href="css/registro.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="shortcut icon" href="img/Captura de pantalla 2021-11-15 123343.jpg" type="image/x-icon">
 
 </head>
 <body>
